# arniadb-manager-server

./: LICENSE  README.md
docs/api/: README.md  addbackupinfo.md  analyzecaslog.md  backupdb.md  backupvolinfo.md  broker_setparam.md  copydb.md  createdb.md  dbspaceinfo.md  getaddbrokerinfo.md  getallsysparam.md  getamsenv.md  getcaslogtopresult.md  getcmsenv.md  getdbmtuserinfo.md  getdbmtuserinfo_new.md  getdbprocstat.md  gethaapplyinfo.md  getloginfo.md  gettransactioninfo.md  ha_reload.md  ha_start.md  ha_status.md  ha_stop.md  heartbeatlist.md  killtransaction.md  loaddb.md  monitorprocess.md  renamedb.md  restoredb.md  setbackupinfo.md  setsysparam.md  startinfo.md  unloaddb.md  updatedbmtuser_new.md  userinfo.md  viewlogviewlog2.md
server/: Makefile.am  build_ams_env.sh  build_internal.bat  build_server.bat  configure.ac  hudsonbuild.cmd  set_hudson_env.sh
server/amserver/: Makefile.am
server/amserver/conf/: Makefile.am  am.conf
server/cmserver/: Makefile.am
server/cmserver/conf/: cm.conf
server/src/: am_auto_task.cpp  am_auto_task.h  am_autojob.cpp  am_autojob.h  am_cci_interface.cpp  am_cci_interface.h  am_cmd.cpp  am_cmd_exec.cpp  am_cmd_exec.h  am_cmd_task.cpp  am_cmd_task.h  am_cmd_util.cpp  am_cmd_util.h  am_config.cpp  am_config.h  am_connect_info.cpp  am_connect_info.h  am_http_server.cpp  am_http_server.h  am_httpd.cpp  am_job_task.cpp  am_job_task.h  am_log.h  am_mailer.h  am_mon_stat.cpp  am_mon_stat.h  am_porting.h  am_server_autoupdate.cpp  am_server_autoupdate.h  am_server_extend_interface.cpp  am_server_extend_interface.h  am_server_interface.cpp  am_server_interface.h  am_server_stat.c  am_server_stat.h  am_server_util.cpp  am_server_util.h  am_text_encryption.c  am_text_encryption.h  am_user.cpp  (+19 more)
server/test/: Makefile  hudsonbuild.sh  task_list.txt  test_cci.py  test_cm_api.py  test_tasks.php  test_tasks.py
server/test/am_mon_data/: dump_data.py
server/test/task_test_case/: addbackupinfo  addvoldb_nullpurpose  addvoldb_nullsize  analyzecaslog  analyzecaslog_option_no  applylogdb  backupdb  backupdb_nullname  backupdb_rep  backupvolinfo  broker_setparam  checkdir  checkfile  class  classinfo  copydb  copydb_advance  copydb_nulldest  copydb_nulldestpath  copydb_nullexvolpath  copydb_nulllogpath  copydb_nullop  copydb_nullsrc  copylogdb  createdb  createdb_accesslog  (+31 more)
server/win/: amserver.sln  cmserver.sln
(+47 files in other folders)
